kubeflow/apps/pipelines/build/k8s/networking.istio.io_v1alpha3_virtualservice_metadata-grpc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: networking.istio.io|VirtualService|kubeflow|metadata-grpc
  name: metadata-grpc
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /ml_metadata
    rewrite:
      uri: /ml_metadata
    route:
    - destination:
        host: metadata-envoy-service.kubeflow.svc.cluster.local
        port:
          number: 9090
